...

        return MainScaffold(
          currentIndex: 0,
          body: Scaffold(
            appBar: AppBar(
              title: const Text(
                'Alunos',
                style: TextStyle(
                  fontWeight: FontWeight.w600,
                  fontSize: 20,
                  color: Colors.white,
                ),
              ),
...
